# adityais.dev

./: .env.example  .gitignore  .gitmodules  README.md  astro.config.mjs  devto-blogs.json  docker-compose.yml  netlify.toml  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  wrangler.toml.example
.github/: copilot-instructions.md
.github/workflows/: auto-update.yaml  auto-update.yml  ci.yml  submodule.yml  tools.yml
public/: robots.txt
public/styles/: global.css
src/: content.config.ts  env.d.ts  payload-types.ts  payload.config.ts
src/app/(payload)/admin/: importMap.js
src/blocks/: CodeBlock.ts
src/collections/: Blogs.ts
src/components/: Button.astro  Contribution.astro  ExperienceEntry.astro  FeaturedProject.astro  Footer.astro  Header.astro  Popup.astro  Prose.astro  SocialButtons.astro  TwoGrid.astro
src/content/: blog
src/content/blog/: 2024-year-in-review.md  gsoc-2025.md  introducing-pastey.md  introducing-release-butler.md  testing-image-carousels.md
src/layouts/: blog.astro  main.astro
src/lib/: rehype-utm.js
src/pages/: contact.astro  contributing.astro  contributions.astro  demo  draft  index.astro
src/pages/blog/: [...slug].astro  index.astro
src/pages/draft/blog/: [...slug].astro
src/plugins/: remark-carousel.mjs
src/utilities/: auth.ts
tools/: .gitignore  Cargo.toml  README.md
tools/contributing/: Cargo.toml  README.md
tools/contributing/src/: lib.rs  main.rs
tools/contributing/tests/: de.rs
tools/dev-to-sync/: main.py  utils.py
tools/devto-fetcher/: README.md  fetch_blogs.py
tools/repo-info/: Cargo.toml
tools/repo-info/src/: lib.rs
tools/stargazer/: Cargo.toml
tools/stargazer/src/: lib.rs
