[workspace]
members = [
    "contributing"
]

resolver = "2"

[workspace.package]
authors = ["Aditya Kumar <git@adityais.dev>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/as1100k/adityais.dev"
repository = "https://github.com/as1100k/adityais.dev"
publish = false

[workspace.dependencies]
serde = "1"
serde_json = "1"
chrono = "0.4"
reqwest = "0.12"
bincode = "1"
tokio = "1"
